@@ -1,4 +1,8 @@
-Alpha 4.2
+Alpha 4.2.1 - 23rd November 2020
+
+- Fix for a crash that could happen when creating furniture decorations
+
+Alpha 4.2 - 22nd November 2020
 
 - Job prioritisation - You can click and drag to set different levels of priority for all jobs in the world, and also on items of furniture that produce jobs
 - The crafting management screen also allows you to set a priority on each crafting recipe of disabled, low, normal or high
